# environ-policies

./: .env  .pre-commit-config.yaml  Dockerfile.postgres  README.md  docker-compose.yml  env.example  init.sql  pyproject.toml
src/: __init__.py  check_dates.py  data_processor.py  main.py  policy_query.py  ranking.py  settings.py  utils.py
src/data/: cleaned_companies.csv  cleaned_policies.csv
src/models/: models.py
