[project]
name = "environ-policies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    # isort
    "I"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
